# com2009

./: .gitignore  .tips.md  404.html  LICENSE.md  README.md  index.html  mkdocs.yaml  requirements.txt  sitemap.xml
.github/workflows/: gh-pages.yml
2021/: .bash_aliases  bashrc_mods  get_tuos_user.sh  rosbackup.sh  rosrestore.sh  set_display.sh  wsl_ros
about/: index.html
about/changelog/: index.html
about/license/: index.html
about/robots/: index.html
assets/javascripts/: bundle.13a4f30d.min.js  bundle.5090c770.min.js  bundle.56dfad97.min.js  bundle.60a45f97.min.js  bundle.88dd0f4e.min.js  bundle.c8b220af.min.js  bundle.e71a0d61.min.js  bundle.f13b1293.min.js  bundle.f1b6f286.min.js
code_templates/: camera_sweep_action_client.py  custom_msg_publisher.py  explore_server.py  lidar_subscriber.py  line_follower.py  move_circle.py  move_client.py  move_server.py  move_square.py  number_game_client.py  object_detection.py  object_detection_complete.py  publisher.py  subscriber.py  subscriber_bare.py  timed_square.py
com2009/: CMakeLists.txt  package.xml
com2009_assignment2/: CMakeLists.txt  package.xml
com2009_assignment2/launch/: beacon_colours.launch  beaconing.launch  exploration.launch  maze_nav.launch  obstacle_avoidance.launch  task1.launch
com2009_assignment2/models/arena_walls/: model.sdf
com2009_assignment2/models/beacon_colours_floor/: model.sdf
com2009_assignment2/models/beaconing/: model.sdf
com2009_assignment2/models/cr3_arena_walls/: model.sdf
com2009_assignment2/models/exploration/: model.config  model.sdf
com2009_assignment2/models/maze_nav/: model.config
com2009_assignment2/models/maze_nav/materials/scripts/: maze_nav_floor.material
com2009_assignment2/models/obstacle_avoidance/: model.sdf
com2009_assignment2/models/obstacle_avoidance/materials/scripts/: floor.material
com2009_assignment2/worlds/: beacon_colours.world  exploration.world  maze_nav.world  obstacle_avoidance.world
com2009_examples/: CMakeLists.txt  package.xml
com2009_examples/launch/: camera_sweep.launch
com2009_examples/src/: camera_sweep.py  colour_search.py  image_colours.py  move_tb3.py  obtain_final_pose.py  publish_robot_pose.py  publisher_cli.py  tb3.py  tb3_odometry.py
com2009_msgs/: CMakeLists.txt  package.xml
com2009_msgs/action/: Search.action
com2009_msgs/srv/: SetBool.srv
com2009_simulations/: CMakeLists.txt  package.xml
com2009_simulations/launch/: beacon_colours.launch  beaconing.launch  coloured_pillars.launch  exploration.launch  line_following.launch  maze_nav.launch  maze_nav_alt.launch  mystery_world.launch  mystery_world_revealed.launch  nav_world.launch  obstacle_avoidance.launch  rviz.launch  task1.launch
com2009_simulations/models/arena_walls/: model.config
com2009_simulations/models/beacon_colours_floor/: model.config
com2009_simulations/models/beacon_colours_floor/materials/scripts/: beacon_colours_floor.material
com2009_simulations/models/beaconing/: model.config
com2009_simulations/models/beaconing/materials/scripts/: floor.material
com2009_simulations/models/cr3_arena_walls/: model.config
com2009_simulations/models/exploration/materials/scripts/: floor.material
com2009_simulations/models/line_following_track/: model.sdf
com2009_simulations/models/maze_nav/: model.sdf
com2009_simulations/models/maze_nav_alt/: model.config  model.sdf
com2009_simulations/models/maze_nav_alt/materials/scripts/: floor.material
com2009_simulations/models/navigation/: model.config  model.sdf
com2009_simulations/models/navigation/materials/scripts/: floor.material
com2009_simulations/models/obstacle_avoidance/: model.config  model.sdf
com2009_simulations/models/task1/: model.config  model.sdf
com2009_simulations/models/task1/materials/scripts/: floor.material
com2009_simulations/worlds/: beacon_colours.world  beaconing.world  coloured_pillars.world  line_following.world  maze_nav_alt.world  navigation.world  obstacle_avoidance.world  task1.world
course/: index.html
course/assignment1/: index.html
course/assignment2/: index.html
course/assignment3/: index.html
course/com3009/: index.html
course/extras/: index.html
docs/: .pages  README.md  about.md
docs/about/: .pages  README.md  acknowledgements.md  changelog.md  license.md  robots.md
docs/course/: .pages  README.md  assignment3.md  com3009.md
docs/extras/: .pages  README.md
docs/labs/: .pages  README.md
docs/ros/: .pages  README.md
docs/stylesheets/: extra.css
docs/waffles/: .pages  README.md  basics.md  essentials.md  intro.md  key-info.md  launching-ros.md  shutdown.md
extras/: index.html
labs/: index.html
labs/assignment1/: index.html
labs/assignment2/: index.html
overrides/: main.html
ros/: index.html
search/: search_index.json
tuos_ros_examples/: CMakeLists.txt  package.xml
tuos_ros_examples/launch/: camera_sweep.launch
tuos_ros_examples/src/: camera_sweep.py  colour_search.py  odom_subscriber_template.py  publisher_cli.py  robot_odometry.py  robot_pose.py
tuos_ros_msgs/: CMakeLists.txt  package.xml
tuos_ros_msgs/action/: CameraSweep.action
tuos_ros_msgs/srv/: Approach.srv  TimedMovement.srv
tuos_ros_simulations/: CMakeLists.txt  package.xml
tuos_ros_simulations/launch/: coloured_pillars.launch  line_following.launch  mystery_world.launch  nav_world.launch
tuos_ros_simulations/models/line_following_track/: model.config
tuos_ros_simulations/models/line_following_track/materials/scripts/: line_following_track.material
tuos_ros_simulations/worlds/: coloured_pillars.world  navigation.world
tuos_tb3_tools/: CMakeLists.txt  README.md  package.xml
tuos_tb3_tools/launch/: ros.launch  rviz.launch
tuos_tb3_tools/rviz/: waffle.rviz
tuos_tb3_tools/src/: tb3_status.py
utils/: .bashrc_additions  assignment2.sh  display.sh  get_tuos_user.sh  prompt_to_restore.sh  rosbackup.sh  rosrestore.sh  submission2.sh
waffles/: index.html
wsl_ros_tools/: .bash_aliases  .bashrc  bashrc_miro  bashrc_mods  bashrc_turtlebot3  get_tuos_user.sh  robot_switch  rosbackup.sh  rosrestore.sh  wsl_ros
(+133 files in other folders)
