<?xml version="1.0"?>
<package format="2">
  <name>com2009</name>
  <version>0.0.0</version>
  <description>The com2009 meta-package</description>

  <maintainer email="t.howard@sheffield.ac.uk">Tom Howard</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>com2009_simulations</exec_depend>
  <exec_depend>tuos_ros_examples</exec_depend>
  <exec_depend>tuos_ros_msgs</exec_depend>
  <exec_depend>tuos_ros_simulations</exec_depend>
  <exec_depend>tuos_tb3_tools</exec_depend>
  <export><metapackage/></export>

</package>
