<?xml version="1.0"?>
<package format="2">
  <name>tuos_tb3_tools</name>
  <version>0.0.0</version>
  <description>The tb3_tools package</description>

  <maintainer email="t.howard@sheffield.ac.uk">Tom Howard</maintainer>
  <license>CC BY-NC</license>
  <url type="website">https://github.com/tom-howard/COM2009/tree/main/tuos_tb3_tools</url>

  <buildtool_depend>catkin</buildtool_depend>

</package>
